[package]
name = "pg_jalali_calendar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_jalali_calendar"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
chrono = "0.4.42"
date_component = "0.4.5"
icu = "1.5.0"
icu_calendar = "1.5.2"
pgrx = "0.16.1"

[dev-dependencies]
pgrx-tests = "0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
